ffi/poc/cpp/corpus/nounk/include/ak_abi.h

/* ---- section 4: common vocabulary (plan.FIXED) --------------------------------- */
typedef struct ak_enc_ctx ak_enc_ctx;
typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4: source code units -> UTF-8 into dst; returns bytes written or an error. */
typedef int32_t (*ak_transcode_fn)(const void *src, size_t len, uint8_t *dst, int32_t cap, ak_grow_fn grow, void *sink);
/* ABI v1 section 4, encode: a blob as DATA in the group. `len` counts SOURCE code units; `tc == NULL` means the field is ABSENT. */
struct ak_str {
  const void *data;
  size_t len;
  ak_transcode_fn tc;
};
typedef struct ak_str ak_str;
/* ---- section 3: the lifecycle (plan.lifecycle, R-G7) ----------------------------
 * Every binding rendered from this plan calls `ak_init` before its first codec or RPC
 * call and treats AK_OK and AK_ALREADY_INITIALIZED as success. A core built with `init-guard`
 * refuses every entry point with AK_ERR_UNINITIALIZED until it has. The prototype
 * is among the fixed entry points below. */

/* Encode group for `TaskOptionsOptionsEntry`. */
struct ak_efix_TaskOptionsOptionsEntry {
  struct ak_str key;
  struct ak_str value;
  uint32_t presence;
};
/* Encode group for `ChunkElementAttrsEntry`. */
struct ak_efix_ChunkElementAttrsEntry {
  struct ak_str key;
  struct ak_str value;
  uint32_t presence;
};
/* Encode group for `SurrogateAttrsEntry`. */
struct ak_efix_SurrogateAttrsEntry {
  struct ak_str key;
  struct ak_str value;
  uint32_t presence;
};
/* Encode group for `Timestamp`. */
struct ak_efix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `Duration`. */
struct ak_efix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
/* Encode group for `ResultRaw`. */
struct ak_efix_ResultRaw {
  struct ak_str session_id;
  struct ak_str name;
  struct ak_str owner_task_id;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp completed_at;
  struct ak_str result_id;
  int64_t size;
  struct ak_str created_by;
  struct ak_str opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
/* Encode group for `TaskOptions`. */
struct ak_efix_TaskOptions {
  struct ak_efix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_str partition_id;
  struct ak_str application_name;
  struct ak_str application_version;
  struct ak_str application_namespace;
  struct ak_str application_service;
  struct ak_str engine_type;
  uint32_t presence;
};
/* Encode group for `TaskOutput`. */
struct ak_efix_TaskOutput {
  uint8_t success;
  struct ak_str error;
  uint32_t presence;
};
/* Encode group for `TaskDetailed`. */
struct ak_efix_TaskDetailed {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_str owner_pod_id;
  int32_t status;
  struct ak_str status_message;
  struct ak_efix_TaskOptions options;
  struct ak_efix_Timestamp created_at;
  struct ak_efix_Timestamp submitted_at;
  struct ak_efix_Timestamp started_at;
  struct ak_efix_Timestamp ended_at;
  struct ak_efix_Timestamp pod_ttl;
  struct ak_efix_TaskOutput output;
  struct ak_str pod_hostname;
  struct ak_efix_Timestamp received_at;
  struct ak_efix_Timestamp acquired_at;
  struct ak_efix_Duration creation_to_end_duration;
  struct ak_efix_Duration processing_to_end_duration;
  struct ak_str initial_task_id;
  struct ak_efix_Duration received_to_end_duration;
  struct ak_efix_Timestamp processed_at;
  struct ak_efix_Timestamp fetched_at;
  struct ak_str payload_id;
  struct ak_str created_by;
  uint32_t presence;
};
/* Encode group for `TaskSummary`. */
struct ak_efix_TaskSummary {
  struct ak_str id;
  struct ak_str session_id;
  struct ak_efix_TaskOptions options;
  int32_t status;
  struct ak_efix_Timestamp created_at;
  struct ak_str error;
  struct ak_str status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
/* Encode group for `Empty`. */
struct ak_efix_Empty {
  uint32_t presence;
};
/* Encode group for `Probe`. */
struct ak_efix_Probe {
  struct ak_str id;
  int32_t opt_count;
  struct ak_str opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_str body_as_text;
  struct ak_str body_as_blob;
  struct ak_efix_Timestamp body_as_stamp;
  struct ak_efix_Empty body_as_nothing;
  uint32_t presence;
};
/* Encode group for `MetricsBatch`. */
struct ak_efix_MetricsBatch {
  struct ak_str id;
  uint32_t presence;
};
/* Encode group for `Pair`. */
struct ak_efix_Pair {
  struct ak_str key;
  int32_t value;
  uint32_t presence;
};
/* Encode group for `ChunkLeaf`. */
struct ak_efix_ChunkLeaf {
  struct ak_str k;
  int32_t v;
  uint32_t presence;
};
/* Encode group for `ChunkInner`. */
struct ak_efix_ChunkInner {
  uint32_t presence;
};
/* Encode group for `ChunkElement`. */
struct ak_efix_ChunkElement {
  struct ak_str id;
  struct ak_efix_ChunkInner inner;
  uint32_t presence;
};
/* Encode group for `LeafElement`. */
struct ak_efix_LeafElement {
  struct ak_str id;
  int64_t n;
  struct ak_efix_Timestamp stamp;
  uint32_t presence;
};
/* Encode group for `SurrogateInner`. */
struct ak_efix_SurrogateInner {
  struct ak_str text;
  uint32_t presence;
};
/* Decode group for `SurrogateInner`. */
struct ak_dfix_SurrogateInner {
  struct ak_span text;
  uint32_t presence;
};
/* Encode group for `WireZoo`. */
struct ak_efix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_str v_string;
  struct ak_str v_bytes;
  int32_t v_enum;
  struct ak_efix_Timestamp v_msg;
  int32_t v_big_tag;
  uint32_t presence;
};
/* Decode group for `WireZoo`. */
struct ak_dfix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_span v_string;
  struct ak_span v_bytes;
  int32_t v_enum;
  struct ak_dfix_Timestamp v_msg;
  int32_t v_big_tag;
  uint32_t presence;
};
/* Encode vtable for `SurrogateInner`. */
struct ak_evt_SurrogateInner {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `SurrogateInner` (the push family, ABI v1 section 7.1). */
struct ak_dvt_SurrogateInner {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_SurrogateInner *);
};
/* Encode vtable for `WireZoo`. */
struct ak_evt_WireZoo {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `WireZoo` (the push family, ABI v1 section 7.1). */
struct ak_dvt_WireZoo {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_WireZoo *);
};
intptr_t ak_encode_SurrogateInner(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_SurrogateInner *vt, const struct ak_efix_SurrogateInner *fix);
int32_t ak_decode_SurrogateInner(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_SurrogateInner *vt);
int32_t ak_parse_SurrogateInner(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
ak_dec_ctx *ak_dec_ctx_new_SurrogateInner(void);
intptr_t ak_encode_WireZoo(const void *obj, ak_enc_ctx *ctx, const struct ak_evt_WireZoo *vt, const struct ak_efix_WireZoo *fix);
int32_t ak_decode_WireZoo(ak_dec_ctx *ctx, void *obj, const uint8_t *buf, size_t len, const struct ak_dvt_WireZoo *vt);
int32_t ak_parse_WireZoo(ak_dec_ctx *ctx, const uint8_t *buf, size_t len);
ak_dec_ctx *ak_dec_ctx_new_WireZoo(void);
int32_t ak_elemu_ChunkElement(ak_enc_ctx *ctx, const struct ak_efix_ChunkElement *elems, int32_t n, int64_t tok0);
int32_t ak_elem_ChunkElementAttrsEntry(ak_enc_ctx *ctx, const struct ak_efix_ChunkElementAttrsEntry *elems, int32_t n);
int32_t ak_elem_ChunkLeaf(ak_enc_ctx *ctx, const struct ak_efix_ChunkLeaf *elems, int32_t n);
int32_t ak_elem_LeafElement(ak_enc_ctx *ctx, const struct ak_efix_LeafElement *elems, int32_t n);
int32_t ak_elemu_MetricsBatch(ak_enc_ctx *ctx, const struct ak_efix_MetricsBatch *elems, int32_t n, int64_t tok0);
int32_t ak_elem_Pair(ak_enc_ctx *ctx, const struct ak_efix_Pair *elems, int32_t n);
int32_t ak_elem_Probe(ak_enc_ctx *ctx, const struct ak_efix_Probe *elems, int32_t n);
int32_t ak_elem_ResultRaw(ak_enc_ctx *ctx, const struct ak_efix_ResultRaw *elems, int32_t n);
int32_t ak_elem_SurrogateAttrsEntry(ak_enc_ctx *ctx, const struct ak_efix_SurrogateAttrsEntry *elems, int32_t n);
int32_t ak_elemu_TaskDetailed(ak_enc_ctx *ctx, const struct ak_efix_TaskDetailed *elems, int32_t n, int64_t tok0);
int32_t ak_elem_TaskOptionsOptionsEntry(ak_enc_ctx *ctx, const struct ak_efix_TaskOptionsOptionsEntry *elems, int32_t n);
int32_t ak_elemu_TaskSummary(ak_enc_ctx *ctx, const struct ak_efix_TaskSummary *elems, int32_t n, int64_t tok0);
int32_t ak_blob_run(ak_enc_ctx *ctx, const struct ak_str *elems, int32_t n);
int32_t ak_run_i32(ak_enc_ctx *ctx, const int32_t *p, size_t n);
int32_t ak_run_i64(ak_enc_ctx *ctx, const int64_t *p, size_t n);
int32_t ak_run_f64(ak_enc_ctx *ctx, const double *p, size_t n);
int32_t ak_run_u8(ak_enc_ctx *ctx, const uint8_t *p, size_t n);
intptr_t ak_bdr_drain(ak_dec_ctx *ctx, uint8_t *dst, size_t cap, size_t *cursor);
int32_t ak_bdr_ptr(ak_dec_ctx *ctx, const uint8_t * *ptr, size_t *len);