ffi/poc/codec/crates/ak-abi/src/generated_corpus_nounk/abi.rs

    pub fn ak_encode_SurrogateInner(
        obj: *const c_void,
        ctx: *mut ak_enc_ctx,
        vt: *const ak_evt_SurrogateInner,
        fix: *const ak_efix_SurrogateInner,
    ) -> isize;
    pub fn ak_decode_SurrogateInner(
        ctx: *mut ak_dec_ctx,
        obj: *mut c_void,
        buf: *const u8,
        len: usize,
        vt: *const ak_dvt_SurrogateInner,
    ) -> i32;
    /// A decode context BOUND to this root (rule 6); unknown fields are compiled out.
    pub fn ak_dec_ctx_new_SurrogateInner() -> *mut ak_dec_ctx;
    /// ABI v1 section 7.1's PULL family: no `obj`, no vtable and no reverse
    /// call. The decoded values land in the context's record buffer and the
    /// host reads them with `ak_bdr_drain` or `ak_bdr_ptr`.
    pub fn ak_parse_SurrogateInner(
        ctx: *mut ak_dec_ctx,
        buf: *const u8,
        len: usize,
    ) -> i32;
    pub fn ak_encode_WireZoo(
        obj: *const c_void,
        ctx: *mut ak_enc_ctx,
        vt: *const ak_evt_WireZoo,
        fix: *const ak_efix_WireZoo,
    ) -> isize;
    pub fn ak_decode_WireZoo(
        ctx: *mut ak_dec_ctx,
        obj: *mut c_void,
        buf: *const u8,
        len: usize,
        vt: *const ak_dvt_WireZoo,
    ) -> i32;
    /// A decode context BOUND to this root (rule 6); unknown fields are compiled out.
    pub fn ak_dec_ctx_new_WireZoo() -> *mut ak_dec_ctx;
    /// ABI v1 section 7.1's PULL family: no `obj`, no vtable and no reverse
    /// call. The decoded values land in the context's record buffer and the
    /// host reads them with `ak_bdr_drain` or `ak_bdr_ptr`.
    pub fn ak_parse_WireZoo(
        ctx: *mut ak_dec_ctx,
        buf: *const u8,
        len: usize,
    ) -> i32;
    /// Unrestricted form: names element i as `tok0 + i` from a contiguous
    /// token range the host allocated, because the codec has to call back
    /// into the host mid-run for `ChunkElement`'s own repeated fields.
    pub fn ak_elemu_ChunkElement(
        ctx: *mut ak_enc_ctx,
        elems: *const ak_efix_ChunkElement,
        n: i32,
        tok0: i64,
    ) -> i32;
    /// Leaf form: `ChunkElementAttrsEntry` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_ChunkElementAttrsEntry(ctx: *mut ak_enc_ctx, elems: *const ak_efix_ChunkElementAttrsEntry, n: i32) -> i32;
    /// Leaf form: `ChunkLeaf` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_ChunkLeaf(ctx: *mut ak_enc_ctx, elems: *const ak_efix_ChunkLeaf, n: i32) -> i32;
    /// Leaf form: `LeafElement` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_LeafElement(ctx: *mut ak_enc_ctx, elems: *const ak_efix_LeafElement, n: i32) -> i32;
    /// Unrestricted form: names element i as `tok0 + i` from a contiguous
    /// token range the host allocated, because the codec has to call back
    /// into the host mid-run for `MetricsBatch`'s own repeated fields.
    pub fn ak_elemu_MetricsBatch(
        ctx: *mut ak_enc_ctx,
        elems: *const ak_efix_MetricsBatch,
        n: i32,
        tok0: i64,
    ) -> i32;
    /// Leaf form: `Pair` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_Pair(ctx: *mut ak_enc_ctx, elems: *const ak_efix_Pair, n: i32) -> i32;
    /// Leaf form: `Probe` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_Probe(ctx: *mut ak_enc_ctx, elems: *const ak_efix_Probe, n: i32) -> i32;
    /// Leaf form: `ResultRaw` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_ResultRaw(ctx: *mut ak_enc_ctx, elems: *const ak_efix_ResultRaw, n: i32) -> i32;
    /// Leaf form: `SurrogateAttrsEntry` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_SurrogateAttrsEntry(ctx: *mut ak_enc_ctx, elems: *const ak_efix_SurrogateAttrsEntry, n: i32) -> i32;
    /// Unrestricted form: names element i as `tok0 + i` from a contiguous
    /// token range the host allocated, because the codec has to call back
    /// into the host mid-run for `TaskDetailed`'s own repeated fields.
    pub fn ak_elemu_TaskDetailed(
        ctx: *mut ak_enc_ctx,
        elems: *const ak_efix_TaskDetailed,
        n: i32,
        tok0: i64,
    ) -> i32;
    /// Leaf form: `TaskOptionsOptionsEntry` is transitively free of repeated and map fields,
    /// so the codec makes no reverse call during a run.
    pub fn ak_elem_TaskOptionsOptionsEntry(ctx: *mut ak_enc_ctx, elems: *const ak_efix_TaskOptionsOptionsEntry, n: i32) -> i32;
    /// Unrestricted form: names element i as `tok0 + i` from a contiguous
    /// token range the host allocated, because the codec has to call back
    /// into the host mid-run for `TaskSummary`'s own repeated fields.
    pub fn ak_elemu_TaskSummary(
        ctx: *mut ak_enc_ctx,
        elems: *const ak_efix_TaskSummary,
        n: i32,
        tok0: i64,
    ) -> i32;
    /// A run of strings or bytes under the repeated field the codec has open.
    pub fn ak_blob_run(ctx: *mut ak_enc_ctx, elems: *const ak_str, n: i32) -> i32;
    /// A packed repeated scalar: the host's own array, handed over whole.
    pub fn ak_run_i32(ctx: *mut ak_enc_ctx, p: *const i32, n: usize) -> i32;
    /// A packed repeated scalar: the host's own array, handed over whole.
    pub fn ak_run_i64(ctx: *mut ak_enc_ctx, p: *const i64, n: usize) -> i32;
    /// A packed repeated scalar: the host's own array, handed over whole.
    pub fn ak_run_f64(ctx: *mut ak_enc_ctx, p: *const f64, n: usize) -> i32;
    /// A packed repeated scalar: the host's own array, handed over whole.
    pub fn ak_run_u8(ctx: *mut ak_enc_ctx, p: *const u8, n: usize) -> i32;
}

/// What each length-prefix site of the core is, in site order, so a miss count
/// can name the field it came from (ABI v1 open decision 5). A descriptor fact,
/// so it lives in the header both sides compile against.
pub const SITE_NAMES: [&str; 122] = [
    "blob/TaskOptionsOptionsEntry/key",
    "blob/TaskOptionsOptionsEntry/value",
    "blob/ChunkElementAttrsEntry/key",
    "blob/ChunkElementAttrsEntry/value",
    "blob/SurrogateAttrsEntry/key",
    "blob/SurrogateAttrsEntry/value",
    "blob/ResultRaw/session_id",
    "blob/ResultRaw/name",
    "blob/ResultRaw/owner_task_id",
    "child/ResultRaw/created_at",
    "child/ResultRaw/completed_at",
    "blob/ResultRaw/result_id",
    "blob/ResultRaw/created_by",
    "blob/ResultRaw/opaque_id",
    "loop/TaskOptions/options",
    "child/TaskOptions/max_duration",
    "blob/TaskOptions/partition_id",
    "blob/TaskOptions/application_name",
    "blob/TaskOptions/application_version",
    "blob/TaskOptions/application_namespace",
    "blob/TaskOptions/application_service",
    "blob/TaskOptions/engine_type",
    "blob/TaskOutput/error",
    "blob/TaskDetailed/id",
    "blob/TaskDetailed/session_id",
    "blob/TaskDetailed/owner_pod_id",
    "loop/TaskDetailed/parent_task_ids",
    "loop/TaskDetailed/data_dependencies",
    "loop/TaskDetailed/expected_output_ids",
    "loop/TaskDetailed/retry_of_ids",
    "blob/TaskDetailed/status_message",
    "child/TaskDetailed/options",
    "loop/TaskDetailed/options.options",
    "child/TaskDetailed/options.max_duration",
    "blob/TaskDetailed/options.partition_id",
    "blob/TaskDetailed/options.application_name",
    "blob/TaskDetailed/options.application_version",
    "blob/TaskDetailed/options.application_namespace",
    "blob/TaskDetailed/options.application_service",
    "blob/TaskDetailed/options.engine_type",
    "child/TaskDetailed/created_at",
    "child/TaskDetailed/submitted_at",
    "child/TaskDetailed/started_at",
    "child/TaskDetailed/ended_at",
    "child/TaskDetailed/pod_ttl",
    "child/TaskDetailed/output",
    "blob/TaskDetailed/output.error",
    "blob/TaskDetailed/pod_hostname",
    "child/TaskDetailed/received_at",
    "child/TaskDetailed/acquired_at",
    "child/TaskDetailed/creation_to_end_duration",
    "child/TaskDetailed/processing_to_end_duration",
    "blob/TaskDetailed/initial_task_id",
    "child/TaskDetailed/received_to_end_duration",
    "child/TaskDetailed/processed_at",
    "child/TaskDetailed/fetched_at",
    "blob/TaskDetailed/payload_id",
    "blob/TaskDetailed/created_by",
    "blob/TaskSummary/id",
    "blob/TaskSummary/session_id",
    "child/TaskSummary/options",
    "loop/TaskSummary/options.options",
    "child/TaskSummary/options.max_duration",
    "blob/TaskSummary/options.partition_id",
    "blob/TaskSummary/options.application_name",
    "blob/TaskSummary/options.application_version",
    "blob/TaskSummary/options.application_namespace",
    "blob/TaskSummary/options.application_service",
    "blob/TaskSummary/options.engine_type",
    "child/TaskSummary/created_at",
    "blob/TaskSummary/error",
    "blob/TaskSummary/status_message",
    "blob/Probe/id",
    "blob/Probe/opt_label",
    "oneofmsg/Probe/body",
    "oneofblob/Probe/body.as_text",
    "oneofblob/Probe/body.as_blob",
    "blob/UploadResultData/session_id",
    "blob/UploadResultData/result_id",
    "blob/UploadResultData/data_chunk",
    "blob/MetricsBatch/id",
    "loop/MetricsBatch/ticks",
    "loop/MetricsBatch/values",
    "loop/MetricsBatch/codes",
    "loop/MetricsBatch/flags",
    "loop/MetricsBatch/statuses",
    "blob/Pair/key",
    "loop/ListResultsResponse/results",
    "loop/ListTasksDetailedResponse/tasks",
    "loop/ListTaskSummaryResponse/tasks",
    "loop/ListProbeResponse/probes",
    "loop/ListMetricsResponse/batches",
    "child/UploadResultDataMessage/upload",
    "blob/UploadResultDataMessage/upload.session_id",
    "blob/UploadResultDataMessage/upload.result_id",
    "blob/UploadResultDataMessage/upload.data_chunk",
    "loop/DualResponse/left",
    "loop/DualResponse/right",
    "blob/ChunkLeaf/k",
    "loop/ChunkInner/marks",
    "loop/ChunkInner/leaves",
    "loop/ChunkElement/labels",
    "loop/ChunkElement/attrs",
    "blob/ChunkElement/id",
    "child/ChunkElement/inner",
    "loop/ChunkElement/inner.marks",
    "loop/ChunkElement/inner.leaves",
    "loop/ChunkedResponse/items",
    "loop/ChunkedResponseWide/items",
    "blob/LeafElement/id",
    "child/LeafElement/stamp",
    "loop/LeafResponse/items",
    "blob/Surrogate/text",
    "child/Surrogate/nested",
    "blob/Surrogate/nested.text",
    "loop/Surrogate/attrs",
    "loop/Surrogate/texts",
    "blob/Surrogate/raw",
    "blob/SurrogateInner/text",
    "blob/WireZoo/v_string",
    "blob/WireZoo/v_bytes",
    "child/WireZoo/v_msg",
];
